# MLOps-Tutorial

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yml
app/: main.py
app/enums/: __init__.py  dataset_name.py  device_name.py  model_name.py  optimizer_name.py
app/routers/: __init__.py  evaluate.py  inference.py  train.py
app/schemas/: __init__.py  evaluate_params.py  inference_params.py  training_params.py
app/utils/: __init__.py  set_seed.py  utils.py
config/: config.py
engine/: __init__.py  evaluate.py  export.py  exporter.py  inference.py  train.py
models/: __init__.py  cnn.py  cnn_with_bn.py  mlp.py
tests/: test_evaluate.py  test_inference.py  test_train.py
utils/: __init__.py  utils.py  visualize.py
