[tool.poetry]
name = "mlops-tutorial"
version = "0.1.0"
description = ""
authors = ["Sangh0 <hop7311@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.0"
torchvision = "^0.19.0"
fastapi = "^0.111.1"
mlflow = "^2.14.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
