[tool.poetry]
name = "mlops-tutorial"
version = "0.1.0"
description = "A tutorial project demonstrating MLOps practices with FastAPI and PyTorch."
authors = ["Sangh0 <hop7311@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.0"
torchvision = "^0.19.0"
fastapi = "^0.111.1"
mlflow = "^2.14.3"
pyngrok = "^7.2.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
